--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team Up</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <div class="icon">
+                <img src="./assets/logo.png" alt="" height="100" width="100">
+            </div>
+            <div class="main">
+                <div class="mainTop">
+                    <div class="instagram">instagram
 
+                    </div>
+                <div class="checkMark">
+                    <img src="./assets/check-mark.png" alt="" height="15px" width="15px">
+                </div>
+                <div class="follow">
+                    <button>Following</button>
+                </div>
+                <div class="dots">
+                    <button>...</button>
+                </div>
+            </div>
+            <div class="mainBottom">
+                <div class="posts">
+                    <b>5,863</b>&nbsp; posts
+                </div>
+                <div class="followers">
+                    <b>303m</b>&nbsp; followers
+                </div>
+                <div class="following">
+                    <b>223</b>&nbsp; following
+                </div>
+            </div>
+            <div class="mainTweet">
+                <div class="insta">
+                    Instagram
+                </div>
+                <div class="heart">
+                    Bringing you closer to the people and things you love.<img src="./assets/heart.png" alt="" height="15px" width="15px">
+                </div>
+                <div class="link">
+                    <a href="help.instagram.com">help.instagram.com</a>
+                </div>
+                <div class="followedBy">
+                    Followed by <b>thedailyshow</b> and <b>kevin</b>
+                </div>
+            </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="talent">
+                <img src="./assets/talent.png" alt="" height="100" width="100">
+            <div class="talentTitle">
+                Talent
+            </div>
+        </div>
+            <div class="travel">
+                <img src="./assets/travel.png" alt="" height="100" width="100">
+            <div class="travelTitle">
+                Travel
+            </div>
+        </div>
+            <div class="beauty">
+                <img src="./assets/beauty.png" alt="" height="100" width="100">
+            <div class="beautyTitle">
+                Beauty
+            </div>
+        </div>
+            <div class="fluff">
+                <img src="./assets/fluff.png" alt="" height="100" width="100">
+            <div class="fluffTitle">
+                Fluff
+            </div>
+        </div>
+            <div class="ASMR">
+                <img src="./assets/asmr.png" alt="" height="100" width="100">
+            <div class="asmrTitle">
+                ASMR
+            </div>
+        </div>
+            <div class="sports">
+                <img src="./assets/sports.png" alt="" height="100" width="100">
+            <div class="sportsTitle">
+                Sports
+            </div>
+        </div>
+            <div class="art">
+                <img src="./assets/asmr.png" alt="" height="100" width="100">
+            <div class="artTitle">
+                Art
+            </div>
+        </div>
+        </div>
+    </div>
+</body>
+</html>
