--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                 <div class="insta">
                     Instagram
                 </div>
-                <div class="heart">
-                    Bringing you closer to the people and things you love.<img src="./assets/heart.png" alt="" height="15px" width="15px">
+                <div class="tweet">
+                    Bringing you closer to the people and things you love.
+                    <div class="heart icon-pulse"><img src="./assets/heart.png" alt="" height="15px" width="15px"></div>
                 </div>
                 <div class="link">
                     <a href="help.instagram.com">help.instagram.com</a>
